fix: change layout spacings

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -26,6 +26,7 @@
   h5,
   h6 {
     @apply font-vt323;
+    @apply pb-4;
   }
 
   h1 {
